--- a/dev/index.html
+++ b/dev/index.html
@@ -1,9 +1,9 @@
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="text/javascript" src="./bundle.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+</head>
+<body >
+  <div id="root" style="height: 100%;"></div>
+</body>
 </html>
