--- a/dev/index.html
+++ b/dev/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="//cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet">
+  <link href="//cdn.quilljs.com/1.3.4/quill.core.css" rel="stylesheet">
 </head>
 <body >
   <div id="root" style="height: 100%;"></div>
